OKi ça roule :)

--- a/header.html
+++ b/header.html
@@ -29,7 +29,7 @@
           title="Recherchez dans "
           href="http://perso.crans.org/besson/_static/opensearch.xml"/>
     <link rel="shortcut icon" href="http://perso.crans.org/besson/_static/.besson.png"/>
-    <link rel="top" title="" href="index.html" />
+    <link rel="top" title="" href="http://perso.crans.org/besson/index.html" />
  <script type="text/javascript">
   var myip = "inconnue"; // have to be initialized before calling l2.io/ip.js?var=myip
   var title_backup = window.document.title;
@@ -199,7 +199,7 @@ function(){ console.log('[nbl] Loading forkit with NBL.js ...'); } ]">
              >modules</a></li>
  <li><a href="http://lbesson.bitbucket.org" title="Page principale : http://lbesson.bitbucket.org/">
   <img src="http://perso.crans.org/besson/_static/.besson.png" alt="" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
- <li><a href="index.html">Lilian Besson</a> &raquo;</li>
+ <li><a href="http://perso.crans.org/besson/index.html">Lilian Besson</a> &raquo;</li>
 <!-- Display info if Javascipt available. -->
  <script type="text/javascript">
   function writeLocationOfThePage(beforetext, aftertext, openstyletext, openstylelink) {
