L'affichage des dossiers marche bien (mais il faudrait améliorer et ne pas avoir à modifier footer.html et header.html à la main).

--- a/header.html
+++ b/header.html
@@ -195,7 +195,7 @@ function(){ console.log('[nbl] Loading forkit with NBL.js ...'); } ]">
       <h3>Navigation</h3>
       <ul>
         <li class="right" style="margin-right: 10px">
-          <a href="py-modindex.html" title="Index des modules Python"
+          <a href="http://perso.crans.org/besson/py-modindex.html" title="Index des modules Python"
              >modules</a></li>
  <li><a href="http://lbesson.bitbucket.org" title="Page principale : http://lbesson.bitbucket.org/">
   <img src="http://perso.crans.org/besson/_static/.besson.png" alt="" style="height:32px; width:32px; vertical-align: middle; margin-top: -1px" /></a>»</li>
