--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -38,7 +38,7 @@
     <meta name="DC.Language" content="fr" />
     <meta name="DC.Creator" content="Lilian Besson" />
     <meta name="DC.Subject" content="Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchiking" />
-    <meta name="DC.Date" content="2013-02-11" />
+    <meta name="DC.Date" content="2013-17-11" />
     <meta name="google-translate-customization" content="a85661a1c6e97576-fa60e54e6e66fb19-g69b2d76b91463205-17"></meta>
   <!-- End of Dublin Core Metadata -->
   <!-- RSS workflow (from perso.crans.org/besson) -->
@@ -141,6 +141,8 @@ function(){ console.log('[nbl] Loading forkit with NBL.js ...'); } ]">
    <script type="text/javascript" src="{{ pathto('_static/nprogress.js', true)|e }}"></script>
   <!-- Forkit.js (http://hakim.se/lab/forkit.js)-->
    <script type="text/javascript" src="{{ pathto('_static/forkit.js', true)|e }}"></script>
+  <!-- SparkLine.js (http://omnipotent.net/jquery.sparkline) -->
+  <!-- <script type="text/javascript" src="{{ pathto('_static/jquery.sparkline.min.js', true)|e }}"></script> -->
 <script type="text/javascript">
  if (typeof console !== 'undefined') { console.log("[INFO] Loading jQuery.noty, Moustrap, NProgress and forkit..."); };
  /* jQuery.noty plugin */
@@ -188,8 +190,8 @@ function(){ console.log('[nbl] Loading forkit with NBL.js ...'); } ]">
  <script type="text/javascript">
   function writeLocationOfThePage(beforetext, aftertext, openstyletext, openstylelink) {
    window.document.write(beforetext + "<span style=\"" + openstyletext + "\">Page '"
-    + "<a style=\"" + openstylelink + "\" title=\"Cette page\" href=\"" + window.location.protocol + "//" + window.location.host + window.location.port + window.location.pathname
-    + "\">" + window.location.protocol + "//" + window.location.host + window.location.port + window.location.pathname
+    + "<a style=\"" + openstylelink + "\" title=\"Cette page\" href=\"" + window.location.protocol + "//" + window.location.host + window.location.pathname
+    + "\">" + window.location.protocol + "//" + window.location.host + window.location.pathname
     + "</a>'</span>" + aftertext)
   };
   writeLocationOfThePage("<li>", "</li>", "color: grey; font-size: 100%", "color: grey; text-decoration: underline");
