besson.qc.to: now roms/gba roms/nds roms/gb roms/gbc to remotely access my roms :) Illegal ? Nop, I possess a real life version of every file, and it is not accessible to anyone else but me.

--- a/header.html
+++ b/header.html
@@ -223,7 +223,7 @@ function(){ console.log('[nbl] Loading forkit with NBL.js ...'); } ]">
             
   <div class="admonition warning">
 <p class="first admonition-title">Warning</p>
-<p class="last">L&#8217;affichage amélioré des répertoires avec Apache est encore en développement.
+<p class="last">L&#8217;affichage amélioré des répertoires avec Apache est encore en développement.<br>
 N'hésitez pas à <a href="https://bitbucket.org/lbesson/wep-sphinx/issues/new">signaler un bug</a> si besoin est!</p>
 </div>
 
