.static/glisse*css: for glisse.js.

--- a/footer.html
+++ b/footer.html
@@ -270,7 +270,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       src="http://perso.crans.org/besson/_images/.firefox_80_15.png" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Apaxy" href="https://github.com/AdamWhitcroft/Apaxy"
-      title="Directory listing theme by Apaxy">
+      title="Directory listing theme by Apaxy"></a></li>
 <li><a class="image-reference" title="Google Analytics" href="http://www.google.com/analytics/">
  <img alt="Use Google Analytics" 
       src="http://perso.crans.org/besson/_images/.google_analytics_80_15.png" 
