http://besson.qc.to/photos/ et http://besson.qc.to/music/ marchent (en privé bien sûr) pas parfaitement encore.

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -38,7 +38,7 @@
     <meta name="DC.Language" content="fr" />
     <meta name="DC.Creator" content="Lilian Besson" />
     <meta name="DC.Subject" content="Computer Science,Maths,OCaml,Python,Crans,ENS de Cachan,ENS Cachan,UCL,PPLV,GNU Nano,Ubuntu,gedit,GNUPlot,GraphViz,GPG,LaTeX,rST,Octave,PGP,Javascript,restructuredtext,pokemon,pokémon,sphinx,bash,cv,résumé,curriculum,vitae,vitæ,GnuPG,Wolfram,Wolfram|Alpha,histoire,nanorc,public key,private key,rsa key,trademarks,transifex,translation,traduction,jota,jota+,bitbucket,agreg,master,license,licence,gpl,conky,rst2pdf,rst2html,ENS,informatique,Sublime Text,mathématiques,stop,autostop,hitchiking" />
-    <meta name="DC.Date" content="2013-21-11" />
+    <meta name="DC.Date" content="2013-27-11" />
     <meta name="google-translate-customization" content="a85661a1c6e97576-fa60e54e6e66fb19-g69b2d76b91463205-17" />
   <!-- End of Dublin Core Metadata -->
   <!-- RSS workflow (from perso.crans.org/besson) -->
@@ -430,10 +430,10 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
  <img alt="Source code hosted on Bitbucket.org, managed with Git 1.7.9.5"
       src="{{ pathto('_images/.git_80_15.png', true)|e }}" 
       style="width: 36.0px; height: 15.0px;" /></a></li>
-<li><a class="image-reference" title="MathJax" href="http://www.mathjax.org">
+<!-- <li><a class="image-reference" title="MathJax" href="http://www.mathjax.org">
  <img alt="Powered by MathJax 2.3"
       src="http://cdn.mathjax.org/mathjax/badge/mj_logo_60x12.png"
-      style="width: 60.0px; height: 12.0px;" /></a></li>
+      style="width: 60.0px; height: 12.0px;" /></a></li> -->
 <!-- A little script to know which web server is used.
      In fact, it is a simple analysis over the hostname :
       - Apache is used on almost every other server I used,
