Update Sphinx to 1.3a0

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -342,7 +342,7 @@ Cette page utilise <a href="http://analytics.google.com/">Google Analytics</a>
       src="{{ pathto('_images/.python_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Sphinx" href="http://sphinx-doc.org/install.html">
- <img alt="Made with Sphinx 1.2b2" 
+ <img alt="Made with Sphinx 1.3a0" 
       src="{{ pathto('_images/.sphinx_80_15.png', true)|e }}" 
       style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="image-reference" title="Ubuntu 12.04" href="http://www.ubuntu.com/about/about-ubuntu">
