whatsnew.*.rst: en .. raw:: html pour pouvoir changer la taille (pas trouver mieux).

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -232,7 +232,7 @@ if (typeof console !== 'undefined') { console.log("[INFO] Starting main JS conte
   writeLocationOfThePage("", "", "color: grey; font-size: 105%", "color: grey");
 </script>
 <br/>
- <a href="https://bitbucket.org/lbesson/web-sphinx/changeset/master" title="Last modifications">Derniers changements</a>.<br>
+ <a href="https://bitbucket.org/lbesson/web-sphinx/changeset/master" title="Last modifications">Derniers changements</a>.
 Une remarque ? Une question ? Cette page
   <a href="https://bitbucket.org/lbesson/web-sphinx/issues">web-sphinx/issues</a> est là pour ça !<br/>
 Si ça concerne des scripts, veuillez utiliser
